##Text encoding: utf-8

2010-12-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: fragments accept local charges again.
	* libs/gcp/mechanism-step.cc: better fix.
	* plugins/paint/arrows/curvedarrowtool.cc: fixed undo/redo.

2010-12-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: ensure that the displayed options page always
	correpond to the active tool.
	* libs/gcp/mechanism-step.cc: when destroying, reparent children when we
	are inside a reaction.
	* libs/gcp/reaction-step.cc: new ReactionStep:AddMolecule() method.
	* libs/gcp/reaction-step.h: ditto.

2010-12-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: destroy a mechanismstep when the last arrow
	is removed.

2010-12-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/arrows/curvedarrowtool.cc: removed a printf debug statement.

2010-12-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: use AC_CONFIG_HEADERS instead of AM_CONFIG_HEADER.

2010-12-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: fixed electrons lone pairs count for atoms with
	an xtended octet.
	* libs/gcp/tool.cc: fixed a crash in goffice plugin.
	* plugins/paint/residues/residues-dlg.cc: don't use deprecated
	GtkNotebookPage.
	* programs/calc/gchemcalc.cc: ditto.

2010-12-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/tool.cc: do not allow document changes using keyboard while
	dragging the mouse. [#31812]
	* libs/gcp/view.cc: ditto.
	* libs/gcp/window.cc: ditto.

2010-11-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.12.6).

2010-11-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* mozilla-plugin/moz-plugin.c: fix typo.

2010-11-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumdoc.cc: fix NMR spectrum integration.

2010-11-15  Jean Bréfort  <jean.brefort@normalesup.org>